2006-06-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_group/Makefile.am: Include Make.xml.rules.
	* modules/pam_group/group.conf.5.xml: New.
	* modules/pam_group/group.conf.5: New, generated from xml file.
	* modules/pam_group/pam_group.8.xml: New.
	* modules/pam_group/pam_group.8: New, generated from xml file.
	* modules/pam_group/README.xml: New.
	* modules/pam_group/README: Regenerated from xml file.

	* modules/pam_ftp/Makefile.am: Include Make.xml.rules.
	* modules/pam_ftp/pam_ftp.8.xml: New.
	* modules/pam_ftp/pam_ftp.8: New, generated from xml file.
	* modules/pam_ftp/README.xml: New.
	* modules/pam_ftp/README: Regenerated from xml file.

	* modules/pam_issue/Makefile.am: Include Make.xml.rules.
	* modules/pam_issue/pam_issue.8.xml: New.
	* modules/pam_issue/pam_issue.8: New, generated from xml file.
	* modules/pam_issue/README.xml: New.
	* modules/pam_issue/README: Regenerated from xml file.

	* modules/pam_filter/Makefile.am: Include Make.xml.rules.
	* modules/pam_filter/pam_filter.8.xml: New.
	* modules/pam_filter/pam_filter.8: New, generated from xml file.
	* modules/pam_filter/README.xml: New.
	* modules/pam_filter/README: Regenerated from xml file.

2006-05-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mkhomedir/pam_mkhomedir.8.xml: Fix umask and skel
	directory documentation.

	* modules/pam_umask/Makefile.am: Include Make.xml.rules.
	* modules/pam_umask/pam_umask.8.xml: New.
	* modules/pam_umask/pam_umask.8: New, generated from xml file.
	* modules/pam_umask/README.xml: New.
	* modules/pam_umask/README: Regenerated from xml file.

2006-05-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mkhomedir/Makefile.am: Include Make.xml.rules.
	* modules/pam_mkhomedir/pam_mkhomedir.8.xml: New.
	* modules/pam_mkhomedir/pam_mkhomedir.8: New, generated from xml file.
	* modules/pam_mkhomedir/README.xml: New.
	* modules/pam_mkhomedir/README: Regenerated from xml file.

2006-05-23  Thorsten Kukuk  <kukuk@thkukuk.de>
