@@ -1,30 +1,57 @@
-pam_lastlogin: The last login module
+pam_lastlog — PAM module to display date of last login
 
-This module can be used as session entry to provide a `Last login on ...'
-message. When the user logs into the system from what ever application
-uses the PAM libraries.  In addition, the module maintains the
-/var/log/lastlog file and the wtmp entry.
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+DESCRIPTION
+
+pam_lastlog is a PAM module to display a line of information about the last
+login of the user. In addition, the module maintains the /var/log/lastlog file.
+
+Some applications may perform this function themselves. In such cases, this
+module is not necessary.
+
+OPTIONS
+
+debug
+
+    Print debug information.
+
+silent
+
+    Don't inform the user about any previous login, just upate the /var/log/
+    lastlog file.
+
+never
+
+    If the /var/log/lastlog file does not contain any old entries for the user,
+    indicate that the user has never previously logged in with a welcome
+    message.
+
+nodate
+
+    Don't display the date of the last login.
+
+noterm
+
+    Don't display the terminal name on which the last login was attempted.
+
+nohost
+
+    Don't indicate from which host the last login was attempted.
+
+nowtmp
+
+    Don't update the wtmp entry.
+
+EXAMPLES
+
+Add the following line to /etc/pam.d/login to display the last login time of an
+user:
+
+    session  required  pam_lastlog.so nowtmp
 
 
-The behavior of this module can be modified with one of the following
-flags:
+AUTHOR
 
- * debug - write more information to syslog(3).
+pam_lastlog was written by Andrew G. Morgan <morgan@kernel.org>.
 
- * nodate - neglect to give the date of the last login when displaying
-            information about the last login on the system.
-
- * noterm - neglect to diplay the terminal name on which the last
-            login was attempt.
-
- * nohost - neglect to indicate from which host the last login was
-            attempted.
-
- * silent - neglect to inform the user about any previous login:
-            just update the /var/log/lastlog file.
-
- * never - if the /var/log/lastlog file does not contain any old
-           entries for the user, indicate that the user has never
-           previously logged in with a ``welcome..." message.
-
- * nowtmp - Don't update the wtmp entry.
